# ReShade-HDR-Metadata

./: CMakeLists.txt  CMakePresets.json
source/: main.cpp
